<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TaskDetailActivity">

    <TextView
        android:id="@+id/titleTaskDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/task_title"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskBodyTextView"
        android:layout_width="164dp"
        android:layout_height="81dp"
        android:layout_marginTop="180dp"
        android:text="@string/task_body"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTaskDetailTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskStateTextView"
        android:layout_width="176dp"
        android:layout_height="83dp"
        android:layout_marginTop="68dp"
        android:text="@string/task_state"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyTextView"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="@string/state"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/taskStateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyTextView"
        app:layout_constraintVertical_bias="0.907" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="@string/notes"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/taskBodyTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTaskDetailTextView"
        app:layout_constraintVertical_bias="0.911" />

</androidx.constraintlayout.widget.ConstraintLayout>